vlib/v/parser/tests/too_many_layers_embedded_generic_type_err.vv
Hello, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
o, Wprld[
